# lshrs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  qa.md  repomix-output-current.xml  repomix-output.xml  requirements.md  requirements.txt  setup.py  testing.py
.github/: ci.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  lint.yml  publish.yml  pylint.yml
app/: download_nltk_data.py  main.py  optimal_br.py  recommendation_system.py
docs/: architecture.md  docs.md  project_structure.txt
examples/: advanced_usage.py
lshrs/: __init__.py  hasher.py  similarity.py  storage.py
lshrs/_config/: config.py
lshrs/core/: __init__.py  main.py
lshrs/hash/: lsh.py
lshrs/io/: __init__.py  parquet.py  postgres.py
lshrs/storage/: __init__.py  redis.py
lshrs/utils/: __init__.py  br.py  similarity.py
src/lshrs/core/: __init__.py  config.py  dataloader.py  exceptions.py  interfaces.py  main.py
src/lshrs/encoding/: embedding.py  main.py  onehot.py  tfidf.py
src/lshrs/hashing/: hyperplane.py  lsh.py  minhash.py
src/lshrs/preprocessing/: lemmatize.py  main.py  shingling.py  stopwords.py  tokenization.py  website.py
src/lshrs/recommendation/: recommender.py  similarity.py
src/lshrs/utils/: br.py  dataloader.py  helpers.py  optimal_br.py  save.py
tests/: conftest.py  test_buffer_semantics.py  test_concurrency.py  test_core.py  test_lshrs.py  test_persistence_security.py  test_redis_pooling.py
