[tool.poetry]
name = "lshrs"
version = "0.1.0"
description = "A Locality Sensitive Hashing based recommendation system for efficient similarity search."
authors = ["Y. Zhao <yimingzhao936@gmail.com>", "M. Guan <mingjia.guan@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mxngjxa/lshrs"
repository = "https://github.com/mxngjxa/lshrs"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [{include = "lshrs", from = "src"}]

[tool.poetry.dependencies]
python = ">3.11"
scipy = "*"
scikit-learn = "*"
numpy = "*"
nltk = "*"
twine = "*"
build = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.ruff]
line-length = 88
lint.select = [
  "E", "F", "W", "I",  # Basic style and import sorting
]
fix = true         # Enable autofix (if used with `ruff check --fix`)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"